refactor build.xml for centralized usage for all plugins.