@@ -1,110 +1,8 @@
 <project name="RiskAnalyticsPC" default="cruise">
 
-    <property environment="env"/>
-    <property name="GRAILS_HOME" value="${env.GRAILS_HOME}"/>
-    <import file="${GRAILS_HOME}/src/grails/grails-macros.xml"/>
-
     <property file="application.properties"/>
 
-    <property name="build.prod.dir" value="${user.home}/.grails/${app.grails.version}/projects/RiskAnalyticsPC"/>
-    <property name="plugin.dir" value="${basedir}/../local-plugins/RiskAnalyticsPropertyCasualty-master"/>
-    <property name="classes.prod.dir" value="${build.prod.dir}/classes"/>
-    <property name="resources.prod.dir" value="src/java"/>
-
-    <property name="dist.dir" value="dist"/>
-    <property name="target.dir" value="target"/>
-    <property name="webapp.lib.dir" value="web-app/lib"/>
-    <property name="ulcPlugIn.webapp.lib.dir" value="${build.prod.dir}/plugins/ulc-2008-u1/web-app/lib"/>
-    <property name="doc.dir" value="docs/gapi"/>
-
-    <condition property="grails" value="${GRAILS_HOME}/bin/grails.bat">
-        <os family="windows"/>
-    </condition>
-    <property name="grails" value="${GRAILS_HOME}/bin/grails"/>
-
-    <tstamp>
-        <format property="build-timestamp" pattern="dd.MM.yyyy HH:mm"/>
-    </tstamp>
-
-    <target name="init">
-        <echo message="GRAILS_HOME: ${GRAILS_HOME}"/>
-        <echo message="app.name: ${app.name}"/>
-        <echo message="classes: ${classes.prod.dir}"/>
-        <echo message="user.language: ${user.language}, user.country: ${user.country}"/>
-    </target>
-
-    <target name="cruise" depends="clean,compile,test"
-            description="to be started by the CruiseControl build server"/>
-
-
-    <target name="clean" depends="init" description="--> Cleans a Grails application">
-        <delete dir="${dist.dir}"/>
-
-        <mkdir dir="${dist.dir}"/>
-        <grails command="clean"/>
-        <delete verbose="true">
-            <fileset dir="." includes="*Db.script"/>
-            <fileset dir="." includes="**Db.properties"/>
-            <fileset dir="." includes="*.tsl"/>
-            <fileset dir="." includes="*.log"/>
-        </delete>
-    </target>
-
-    <target name="clean-plugins"
-            description="Removes all plugins files from the plugin dir. Useful for build servers to avoid grails trying to uninstall an old plugin after an upgrade.">
-        <delete includeemptydirs="true" failonerror="false">
-            <fileset dir="${plugin.dir}" includes="**/*"/>
-        </delete>
-    </target>
-
-
-    <target name="compile" depends="init" description="--> Compiles a Grails application">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="compile"/>
-            <arg value="--non-interactive"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <env key="JAVA_OPTS" value="-Xmx1024m -XX:MaxPermSize=512m -Duser.language='en'"/>
-        </exec>
-    </target>
-
-
-    <target name="stats" depends="init" description="--> grails stats">
-        <grails command="stats"/>
-    </target>
-
-
-    <target name="test" depends="init" description="--> Run a Grails applications unit tests">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="test-app"/>
-            <!--<arg value="-coverage"/>-->
-            <!--<arg value="-echoOut"/>-->
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <env key="JAVA_OPTS"
-                 value="-Xmx1024m -XX:MaxPermSize=512m -Duser.language='en'"/>
-        </exec>
-        <copy todir="${dist.dir}">
-            <fileset dir="target" includes="test-reports/"/>
-        </copy>
-    </target>
-
-    <target name="release-plugin" depends="clean, compile"
-            description="Releases the plugin in our P1 plugin repository.">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="deploy-plugin"/>
-            <arg value="--repository=pillarone"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-        </exec>
-    </target>
-
-    <target name="doc" depends="init" description=" combined groovy and javadoc">
-        <grails command="doc"/>
-        <copy todir="${doc.dir}">
-            <fileset dir="${doc.dir}/src/java"/>
-        </copy>
-        <copy todir="${doc.dir}">
-            <fileset dir="${doc.dir}/src/groovy"/>
-        </copy>
-    </target>
-
-
+    <import>
+        <fileset dir="../local-plugins/${app.name}-master" includes="risk-analytics-core*/scripts/build.xml" />
+    </import>
 </project>
